--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,10 @@
 
+<h1><%= @team_name %></h1><br>
+<h2>Team Motto: <%= @team_motto %></h2>
 
-
+<h3>Members</h3>
+<% @team_members.each do |member| %>
+    <h3>Hero Name: <%= member[:name]%> </h3>
+    <p>Hero Power: <%= member[:power]%> </p>
+    <p>Hero Biography: <%= member[:bio]%> </p>
+<% end %>
